<resources>
    <string name="app_name">Mad Liberation</string>
    <string name="artist_image">ArtistImage</string>
    <string name="artist_name">ArtistName</string>
    <string name="artist_bio">ArtistBio</string>
    <string name="artists">Artists</string>
    <string name="schedule">Schedule</string>
    <string name="vision">Vision</string>
    <string name="map">Map</string>
    <string name="social">Social</string>
    <string-array name="days">
        <item><font fgcolor="@color/white">Friday</font></item>
        <item><font fgcolor="@color/white">Saturday</font></item>
    </string-array>
    <string name = "motto"><b>"Mad Liberation Festival aims to bridge the gap between the collected communities of outsiders and fringe artists from all walks of life and all styles of expression. We pride ourselves in creating an inclusive meeting place and platform that celebrates the richness of what makes these scenes beautiful and diverse, while encouraging all involved to learn from each other's differences and similarities, and to build their individual visions in a shared space designed to inspire the spirit and mind."</b></string>
</resources>
